# boot_static_site

./: .gitignore  README.md  build.sh  pyproject.toml  test.sh
docs/: index.html
docs/blog/glorfindel/: index.html
docs/blog/majesty/: index.html
docs/blog/tom/: index.html
docs/contact/: index.html
public/: index.html
public/blog/majesty/: index.html
src/: conftest.py  constants.py  convert.py  htmlnode.py  main.py  markdown.py  markdown_blocks.py  test_htmlnode.py  test_textnode.py  text_utils.py  textnode.py  unit_htmlnode.py  utils.py
tests/: conftest.py  test_textnode.py
tests/htmlnode/: conftest.py  test_htmlnode.py
tests/text_to_html/: test_conversion.py
tests/textnode/: conftest.py  test_markdown.py  test_markdown_blocks.py  test_textnode.py
