[project]
name = "boot-static-site"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pytest>=8.4.2",
    "pytest-lazy-fixtures>=1.4.0",
]
[tool.pytest.ini_options]
testpaths = [
    "tests",
]
minversion = "8.0"
addopts = "-vv --cache-clear -p no:cacheprovider"
